Bug 493635: long filenames cut off in download dialog, r=blassey
UltraBlame original commit: c70c9baf9a70ac2b9956f9552c342a8404c0596c

--- a/mobile/themes/hildon/browser.css
+++ b/mobile/themes/hildon/browser.css
@@ -5183,6 +5183,78 @@ wrap
 }
 /
 *
+helperapp
+(
+save
+-
+as
+)
+popup
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+*
+/
+#
+helperapp
+-
+target
+{
+font
+-
+size
+:
+11pt
+!
+important
+;
+}
+/
+*
 select
 popup
 -
