--- a/mobile/themes/wince/browser.css
+++ b/mobile/themes/wince/browser.css
@@ -5191,6 +5191,78 @@ wrap
 }
 /
 *
+helperapp
+(
+save
+-
+as
+)
+popup
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+*
+/
+#
+helperapp
+-
+target
+{
+font
+-
+size
+:
+8pt
+!
+important
+;
+}
+/
+*
 select
 popup
 -
